--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
+title: Joe Phillips
 description: A blog about lorem ipsum dolor sit amet
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 url: "joephillips.github.io" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Anon Developer
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
-user_title: Software Developer
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
+username: Joe Phillips
+user_description: As a seasoned angel investor, I specialize in identifying and supporting the most promising innovations in the biotech sector. With a keen eye for disruptive technologies and a passion for driving scientific advancements, I leveraged my extensive network and expertise to provide strategic funding and mentorship to early-stage biotech startups.
+user_title: Angel Investor
+email: joephillips@me.com
+twitter_username: 
+github_username:  
+gplus_username:  
 
 # Google-analytics
 google-analytics:
